06/23/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added back rudimentary key bindings using Swing Actions so they get
      dispached by Swing and are displayed in menus. But infrastructure is
      in place to allow jsXe to catch key bindings itself.

06/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated TreeViewTree to use the new package for EnhancedMenu so it
      compiles properly.

06/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the treeview's actions to extend the new LocalizedAction class.

06/15/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated how properties are loaded for the tree view

06/13/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the options pane extend AbstractOptionPane
    * Renamed the DefaultViewTree to TreeViewTree

06/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated version and dependency info

02/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added cut/copy/paste support for nodes in the tree view. There are still
      some limitations like the keyboard shortcuts don't work, and the actions
      don't work when focused on the right hand side pane.

02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug where adding a DTD node was shown as an option for element
      nodes.
    * Updated the edit DTD node dialog

02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added localized messages to the view. jsXe now supports views having their
      own localized messages.

01/30/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the goToLine() method to DefaultView to maintain the contract for
      DocumentView

11/21/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a rudamentary way to add a DOCTYPE node. You add one by right
      clicking on the document node in the tree and adding it like any other
      node. However, adding a doc type definition displays a dialog where